# UiPlanApp

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
api/: pyproject.toml
api/app/: __init__.py  code_extractor.py  context_sources.py  copilot_runtime.py  diagram_service.py  explorer.py  explorer_config.py  explorer_indexer.py  explorer_skills.py  generation_service.py  library_service.py  main.py  mermaid_parser.py  plan_loader.py  plan_writer.py  review_service.py  schemas.py  security.py  state.py  uiplan_bundles.py  view_resolver.py
api/app/generation_contracts/: __init__.py  approval_state.py  command_registry.py  constants.py  models.py  package_generation.py  path_allowlist.py  schema_service.py  storage.py
api/app/generation_contracts/schemas/: approval-package.v1.schema.json  approval-state.v1.schema.json  file-proposal.v1.schema.json  (+2 more)
api/app/project_graph/: __init__.py  models.py  templates.py
api/app/routers/: __init__.py  bundle.py  context.py  copilotkit.py  diagram.py  fixtures.py  generation.py  mapping.py  review.py
api/tests/: test_approval_package_storage.py  test_approval_state.py  test_code_extractor.py  test_explorer.py  test_explorer_config.py  test_explorer_indexer.py  test_explorer_skills.py  test_generation_contract_schemas.py  test_generation_service.py  test_library_service.py  test_main.py  test_mapping.py  test_path_allowlist_command_registry.py  test_project_graph_models.py  test_project_graph_templates.py  test_stage_package_generation.py  test_standalone_isolation.py  test_uiplan_integration.py
(+114 files in other folders)
