[project]
name = "uiplan-studio-api"
version = "0.2.0"
description = "Local API for UiPlan Studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "pyyaml",
    "copilotkit>=0.1.88",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "jsonschema>=4.26.0",
]
